# DaraERP

./: AGENTS.md  DESIGN.md  README.md  eslint.config.js  opencode.json  package-lock.json  package.json
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/000-foundation/: spec.md
specs/001-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-auth/checklists/: requirements.md
specs/001-auth/contracts/: auth-commands.md
specs/002-user-management/: plan.md  spec.md  tasks.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: audit.rs  db.rs  error.rs  lib.rs  main.rs  seed.rs
src-tauri/src/auth/: mod.rs  secure_store.rs  session.rs
src-tauri/src/commands/: auth.rs  mod.rs  users.rs
src-tauri/src/models/: mod.rs
src/components/: Layout.tsx  ProtectedRoute.tsx
src/contexts/: AuthContext.tsx
src/i18n/: ar.json  en.json
src/lib/: tauri.ts
src/pages/: Dashboard.tsx  Login.tsx
src/services/: auth.ts  users.ts
